Fix: buttons now wrap

--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -13,7 +13,6 @@
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   margin: 20px;
-  white-space: nowrap;
   display: block;
 }
 
